--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,15 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.0-alpha3",
+    "env": "^0.0.2",
+    "env-cmd": "^10.1.0",
     "history": "^5.3.0",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.62.0",
