--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,14 @@
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
     "sass": "^1.62.0",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
