--- a/client/package.json
+++ b/client/package.json
@@ -7,19 +7,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jquery": "^3.5.29",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.0-alpha3",
+    "datatables.net-dt": "^2.0.2",
     "env": "^0.0.2",
     "env-cmd": "^10.1.0",
     "history": "^5.3.0",
-    "jquery": "^3.6.4",
+    "jquery": "^3.7.1",
+    "jquery-ui-dist": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
