--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "jquery-ui-dist": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-jwt": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.14.1",
