--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.0-alpha3",
-    "datatables.net-dt": "^2.0.2",
+    "datatables.net-bs5": "^2.0.2",
     "env": "^0.0.2",
     "env-cmd": "^10.1.0",
     "history": "^5.3.0",
@@ -56,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "datatables.net-dt": "^2.0.2"
   }
 }
